Quick fix: Created no articles message and added filtering of visible articles in blog service

--- a/src/app/blog/articles/articles.component.scss
+++ b/src/app/blog/articles/articles.component.scss
@@ -37,4 +37,34 @@
     max-width: 1128px;
 
   }
+
+  .no-articles-message {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 2rem;
+    border: 2px solid $primaryDarkColor;
+    border-radius: 12px;
+    background-color: transparent;
+    width: 100%;
+    max-width: 600px;
+    margin: 1rem 0;
+
+    h2 {
+      color: $primaryDarkColor;
+      font-size: 1.8rem;
+      font-weight: 600;
+      text-align: center;
+      margin: 0;
+      line-height: 1.3;
+
+      @media screen and (max-width: 768px) {
+        font-size: 1.5rem;
+      }
+
+      @media screen and (max-width: 480px) {
+        font-size: 1.3rem;
+      }
+    }
+  }
 }
